Enhance CSV evaluation with detailed results and real debate
- Add detailed results output: rubric, ground_truth (numerical_answer,
  expected_recommendation, tolerance), agent response, debate details,
  green agent evaluation feedback

- Implement real debate: Purple agent now generates substantive rebuttals
  by calling /analyze with debate context instead of placeholder responses

- Add RubricCriterionType enum with "required" and "penalty" types,
  replacing legacy "operator" field in CSV rubric format

- Support new CSV columns: Numerical Answer, Expected Recommendation,
  Tolerance for richer ground truth data

- Fix literal questions: detect when CSV questions lack {ticker}/{year}
  placeholders and preserve them as-is instead of random substitution

- Fix MCP Dockerfiles: correct file paths for fastmcp run command

- Add comprehensive tests for rubric parsing (19 tests passing)

--- a/Dockerfile.mcp-edgar
+++ b/Dockerfile.mcp-edgar
@@ -3,7 +3,8 @@ WORKDIR /app
 
 RUN pip install fastmcp edgartools pandas numpy
 
-COPY src/mcp_servers/sec_edgar.py /app/sec_edgar.py
+# Copy to the path expected by docker-compose command
+COPY src/mcp_servers/sec_edgar.py /app/src/mcp_servers/sec_edgar.py
 
 EXPOSE 8000
-CMD ["python", "/app/sec_edgar.py"]
+CMD ["fastmcp", "run", "src/mcp_servers/sec_edgar.py:create_edgar_server", "--transport", "http", "--host", "0.0.0.0", "--port", "8000"]
