--- a/Dockerfile.mcp-sandbox
+++ b/Dockerfile.mcp-sandbox
@@ -4,8 +4,8 @@ WORKDIR /app
 # Install minimal deps
 RUN pip install fastmcp numpy pandas scipy yfinance
 
-# Copy sandbox server code
-COPY src/mcp_servers/sandbox.py /app/sandbox.py
+# Copy to the path expected by docker-compose command
+COPY src/mcp_servers/sandbox.py /app/src/mcp_servers/sandbox.py
 
 EXPOSE 8000
-CMD ["python", "/app/sandbox.py"]
+CMD ["fastmcp", "run", "src/mcp_servers/sandbox.py:create_sandbox_server", "--transport", "http", "--host", "0.0.0.0", "--port", "8000"]
