--- a/Dockerfile.mcp-yahoo
+++ b/Dockerfile.mcp-yahoo
@@ -3,7 +3,8 @@ WORKDIR /app
 
 RUN pip install fastmcp yfinance pandas numpy
 
-COPY src/mcp_servers/yahoo_finance.py /app/yahoo_finance.py
+# Copy to the path expected by docker-compose command
+COPY src/mcp_servers/yahoo_finance.py /app/src/mcp_servers/yahoo_finance.py
 
 EXPOSE 8000
-CMD ["python", "/app/yahoo_finance.py"]
+CMD ["fastmcp", "run", "src/mcp_servers/yahoo_finance.py:create_yahoo_finance_server", "--transport", "http", "--host", "0.0.0.0", "--port", "8000"]
