update template according to the latest example code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,12 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
     "httpx>=0.25.0",
-    "pydantic>=2.5.0",
+    "pydantic>=2.12.5",
     "openai>=1.0.0",
     "anthropic>=0.18.0",
     "tiktoken>=0.5.0",
@@ -38,10 +39,10 @@ dependencies = [
     "structlog>=23.2.0",
     "rich>=13.0.0",
     "typer>=0.9.0",
-    # A2A Protocol Support
-    "a2a-sdk[http-server]>=0.3.0",
+    # A2A Protocol Support (updated for AgentBeats compatibility)
+    "a2a-sdk[http-server]>=0.3.20",
     "fastapi>=0.100.0",
-    "uvicorn>=0.23.0",
+    "uvicorn>=0.38.0",
     # MCP Protocol Support
     "fastmcp>=2.0.0",
 ]
