--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,22 @@
 # Options: openai, anthropic
 LLM_PROVIDER=openai
 
-# OpenAI API Key (required if LLM_PROVIDER=openai)
-OPENAI_API_KEY=sk-...
+# --- Option 1: Local vLLM (gpt-oss-20b) ---
+# Uncomment these 3 lines to use local vLLM model
+# OPENAI_API_KEY=dummy
+# OPENAI_API_BASE=http://localhost:8000/v1
+# LLM_MODEL=gpt-oss-20b
 
-# Anthropic API Key (required if LLM_PROVIDER=anthropic)
-ANTHROPIC_API_KEY=sk-ant-...
+# --- Option 2: OpenAI API ---
+# Uncomment these lines to use OpenAI
+OPENAI_API_KEY=sk-...
+LLM_MODEL=gpt-4o
+
+# --- Option 3: Anthropic API ---
+# Uncomment these lines to use Anthropic
+# LLM_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=sk-ant-...
+# LLM_MODEL=claude-3.5-sonnet
 
 # Database Configuration (optional, for persistent storage)
 DB_PASSWORD=secure_password_here
