--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@
 # Options: openai, anthropic
 LLM_PROVIDER=openai
 
-# --- Option 1: Local vLLM (gpt-oss-20b) ---
+# --- Option 1: Local vLLM (openai/gpt-oss-20b) ---
 # Uncomment these 3 lines to use local vLLM model
 # OPENAI_API_KEY=dummy
 # OPENAI_API_BASE=http://localhost:8000/v1
-# LLM_MODEL=gpt-oss-20b
+# LLM_MODEL=openai/gpt-oss-20b
 
 # --- Option 2: OpenAI API ---
 # Uncomment these lines to use OpenAI
@@ -26,10 +26,12 @@ LLM_MODEL=gpt-4o
 DB_PASSWORD=secure_password_here
 
 # MCP Server Configuration
-# These are set automatically in docker-compose, but can be overridden
-MCP_EDGAR_URL=http://localhost:8001
-MCP_YFINANCE_URL=http://localhost:8002
-MCP_SANDBOX_URL=http://localhost:8003
+# Purple Agent can use remote MCP servers (via HTTP) or in-process MCP (if URLs unset).
+# RECOMMENDED: Use in-process MCP (faster, simpler, no external processes needed)
+# Just leave these commented out:
+# MCP_EDGAR_URL=http://localhost:8101
+# MCP_YFINANCE_URL=http://localhost:8102
+# MCP_SANDBOX_URL=http://localhost:8103
 
 # Evaluation Settings
 # Enable temporal locking (prevents look-ahead bias)
