--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,13 @@ LLM_MODEL=gpt-4o
 # ANTHROPIC_API_KEY=sk-ant-...
 # LLM_MODEL=claude-3.5-sonnet
 
-# Database Configuration (optional, for persistent storage)
-DB_PASSWORD=secure_password_here
+# Database Configuration (for persistent task storage)
+# SQLite (local dev): use separate files to avoid lock conflicts
 DATABASE_URL=sqlite+aiosqlite:///tasks.db
+PURPLE_DATABASE_URL=sqlite+aiosqlite:///purple_tasks.db
+# PostgreSQL (production): can use same DB since it supports concurrent writes
+# DATABASE_URL=postgresql+asyncpg://user:pass@localhost/agentbusters
+# PURPLE_DATABASE_URL=postgresql+asyncpg://user:pass@localhost/agentbusters
 
 # MCP Server Configuration
 # Purple Agent can use remote MCP servers (via HTTP) or in-process MCP (if URLs unset).
