add llm evaluator to bizfinbench and finance agent public_csv

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ LLM_PROVIDER=openai
 # Uncomment these 3 lines to use local vLLM model
 # OPENAI_API_KEY=dummy
 # OPENAI_API_BASE=http://localhost:8000/v1
+# OPENAI_BASE_URL=http://localhost:8000/v1  # alias for OPENAI_API_BASE
 # LLM_MODEL=openai/gpt-oss-20b
 
 # --- Option 2: OpenAI API ---
@@ -39,6 +40,11 @@ PURPLE_DATABASE_URL=sqlite+aiosqlite:///purple_tasks.db
 # MCP_SANDBOX_URL=http://localhost:8103
 
 # Evaluation Settings
+# LLM-as-judge for dataset evaluators (bizfinbench/public_csv)
+# EVAL_USE_LLM=true
+# EVAL_LLM_MODEL=gpt-4o-mini
+# EVAL_LLM_TEMPERATURE=0.0
+
 # Enable temporal locking (prevents look-ahead bias)
 TEMPORAL_LOCK_ENABLED=true
 
