--- a/.github/workflows/test-and-publish-green.yml
+++ b/.github/workflows/test-and-publish-green.yml
@@ -54,10 +54,10 @@ jobs:
         uses: astral-sh/setup-uv@v4
 
       - name: Install test dependencies
-        run: uv sync --extra test || pip install pytest pytest-asyncio httpx
+        run: uv sync --extra dev
 
       - name: Run tests
-        run: uv run pytest tests/ -v --ignore=tests/test_e2e.py || pytest tests/ -v --ignore=tests/test_e2e.py
+        run: uv run pytest tests/ -v --ignore=tests/test_e2e.py
 
       - name: Stop container and show logs
         if: always()
