--- a/Dockerfile.purple
+++ b/Dockerfile.purple
@@ -27,6 +27,7 @@ RUN uv pip install --system \
     tiktoken>=0.5.0 \
     numpy>=1.24.0 \
     pandas>=2.0.0 \
+    scipy>=1.11.0 \
     yfinance>=0.2.30 \
     edgartools>=2.0.0 \
     asyncio>=3.4.0 \
