--- a/config/eval_crypto.yaml
+++ b/config/eval_crypto.yaml
@@ -6,18 +6,18 @@ version: "1.0"
 datasets:
   # Example 1: JSON file-based scenarios (original mode)
   - type: crypto
-    path: data/crypto/scenarios
+    path: data/crypto/eval_hidden
     # remote_manifest: https://example.com/agentbusters/crypto/manifest.json
     # cache_dir: data/crypto/cache
     # cache_ttl_hours: 24
     # download_on_missing: true
-    scenarios:
-      - sample_btc_window
+    pg_enabled: false
+    # scenarios filter removed - use all available scenarios in eval_hidden
     limit: 1
     shuffle: false
     weight: 1.0
     stride: 1
-    max_steps: 60
+    max_steps: 20  # Reduced for faster testing
     evaluation:
       initial_balance: 10000.0
       max_leverage: 3.0
@@ -25,7 +25,7 @@ datasets:
       price_noise_level: 0.001
       slippage_range: [0.0002, 0.0010]
       adversarial_injection_rate: 0.05
-      decision_interval: 1
+      decision_interval: 5  # Only decide every 5 bars (4 decisions for 20 steps)
       funding_interval_hours: 8.0
       score_weights:
         baseline: 0.40
@@ -38,9 +38,7 @@ datasets:
         max_drawdown: 0.15
         win_rate: 0.10
       meta_transforms:
-        - identity
-        - scale_1_1
-        - invert_returns
+        - identity  # Only 1 meta transform for faster testing
 
   # Example 2: PostgreSQL direct query mode with hidden windows
   # Uncomment and configure for production use
@@ -99,4 +97,4 @@ sampling:
   seed: 42
 
 debate: false
-timeout_seconds: 120
+timeout_seconds: 300  # 5 minutes
