Add public_csv back to evaluation and paper
- Add public_csv dataset to eval_config.yaml
- Update paper to include Public CSV in Knowledge Retrieval section
- Now 6 datasets across 5 sections (public_csv shares Knowledge with BizFinBench)

--- a/config/eval_config.yaml
+++ b/config/eval_config.yaml
@@ -11,6 +11,12 @@ datasets:
     shuffle: false
     weight: 1.0
 
+  - type: public_csv
+    path: "data/public.csv"
+    limit: 5
+    shuffle: false
+    weight: 1.0
+
   - type: options
     path: "data/options/questions.json"
     limit: 10
