Add web search MCP tools and improve evaluation config
- Add Tavily-based web search MCP server for Purple Agent
- Enable GDPVal reference files for full evaluation capability
- Add tavily-python dependency to pyproject.toml and Dockerfile.purple
- Integrate web search tools (search_financial_news, search_earnings_info)
  to support public_csv questions about earnings/guidance/news

--- a/Dockerfile.purple
+++ b/Dockerfile.purple
@@ -40,7 +40,8 @@ RUN uv pip install --system \
     fastapi>=0.100.0 \
     uvicorn>=0.38.0 \
     sqlalchemy>=2.0.0 \
-    fastmcp>=2.0.0
+    fastmcp>=2.0.0 \
+    tavily-python>=0.3.0
 
 # Install the purple agent package
 RUN uv pip install --system -e . --no-deps
