--- a/config/eval_config.yaml
+++ b/config/eval_config.yaml
@@ -64,7 +64,7 @@ datasets:
     limit: 10
     shuffle: false
     weight: 1.0
-    include_reference_files: false  # Keep responses concise
+    include_reference_files: true  # Enable reference files for full evaluation
 
 sampling:
   strategy: stratified
